test/fail/testUnknownFunctionException.yak
PROGRAMME factorielle

ENTIER FONCTION factorielle (ENTIER n)
  SI n<=1 ALORS RETOURNE 1
  SINON RETOURNE n*factorielle(n-1)
  FSI
FFONCTION

PRINCIPAL
VAR ENTIER i;


i=5;
  i=ObiJuanKenobi(-1);
  ECRIRE(i);
FPRINCIPAL

FPROGRAMME